# mcmc-demo

./: .containerignore  .gitignore  .typos.toml  Caddyfile  Cargo.toml  Containerfile  Contributing.md  README.md  Trunk.fat.toml  Trunk.toml  _headers.br  build.rs  clippy.toml  cloudflare_build.sh  cloudflare_rename.sh  container_entrypoint.sh  deny.toml  index.fat.html  index.fat.html.patch  index.html  index.html.br  justfile  manifest.json  manifest.json.br  mcmc_demo-8da991d83b2de797.js  mcmc_demo-8da991d83b2de797_bg.wasm  mcmc_demo-8da991d83b2de797_bg.wasm.br  renderdoc_settings.cap  robots.txt.br  rust-toolchain  rust-toolchain.toml  serviceworker.js  sws.toml  test.html  worknotes.md
.cargo/: config.toml
.github/workflows/: pages.yml  qa.yml  rust.yml  test_and_deploy.yml
assets/: _headers  build_all.sh  favicon.typ  html_embed_manifest.sh  manifest.json  serviceworker.js  sw.js
dist_experiment/: index.html  manifest.json  mcmc_demo-676a7a1be0e864d6.js
executable/: .gitignore  Cargo.toml  build.rs  index.fat.html.patch  index.html  justfile
executable/assets/: colors.css  colors_update_html.mjs  egui.css  favicon.typ  loading_animation.css  manifest.json  no_webgpu.html  no_webgpu.mjs  non_egui_styling.css  serviceworker.js  serviceworker_register.mjs
executable/shaders/: binary_distance_approx.buffer.wgsl  binary_distance_approx.compute.wgsl  canvas_ndc_conversion.wgsl  diff_display.fragment.wgsl  helpers.wgsl  multimodal_gaussian.wgsl
executable/src/: app.rs  lib.rs  main.rs
executable/src/diagnostics/: backend_panel.rs  frame_history.rs  gpu_profile_disabled.rs  gpu_profile_enabled.rs  mod.rs  puffin.rs  tracing.rs
executable/src/helpers/: async_last_task_processor.rs  gpu_task.rs  html_bindings.rs  mod.rs  temp_ui_state.rs
executable/src/helpers/bg_task/: helpers.rs  mod.rs
executable/src/simulation/: mod.rs  random_walk_metropolis_hastings.rs  rngs.rs
executable/src/target_distr/: gaussian.rs  mod.rs
executable/src/target_distributions/: multimodal_gaussian.rs
executable/src/visualizations/: mod.rs
executable/src/visualizations/egui_based/: distrib_settings.rs  mod.rs  point_display.rs  target_distrib_settings.rs
executable/src/visualizations/shader_based/: bda_compute.rs  bda_immediate.rs  diff_display.rs  mod.rs  resolution_uniform.rs  target_distr.rs
fat/: index.html  index.html.br  manifest.json  mcmc-demo-1ce236f84f34c754.js  mcmc-demo-322be1ec29c31cf4.js  mcmc-demo-353e4f4399dfc891.js  mcmc-demo-353e4f4399dfc891.js.br  mcmc-demo-353e4f4399dfc891_bg.wasm.br  mcmc-demo-4d1a31005dbff522.js  mcmc-demo-71c4728f9bc301cd.js  mcmc-demo-71c4728f9bc301cd.js.br  mcmc-demo-71c4728f9bc301cd_bg.wasm.br  mcmc-demo-a1eca7b18b65f3aa.js  mcmc-demo-abd352401ddb0dd5.js  mcmc-demo-c66a699cd9a22a30.js  mcmc-demo-c66a699cd9a22a30_bg.wasm.br  mcmc-demo-e31514fa18c4e108.js
macros/: Cargo.toml
macros/src/: lib.rs
mcmc_demo/: .gitignore  Cargo.toml  Trunk.fat.toml  index.fat.html.patch
mcmc_demo/assets/: manifest.json  robots.txt
mcmc_demo/shaders/: conventions.md  diff_display.wgsl  max_norm.compute.wgsl
mcmc_demo/src/diagnostics/: frame_history.rs  tracing.rs
mcmc_demo/src/helpers/: async_last_task_processor.rs  gpu_task.rs
mcmc_demo/src/simulation/: mod.rs  rngs.rs
mcmc_demo/src/target_distributions/: mod.rs
mcmc_demo_macros/: Cargo.toml
shaders/: binary_distance_approx.bufferbinding.wgsl  binary_distance_approx.compute.wgsl  binary_distance_approx.fragment.wgsl  binary_distance_approx.wgsl  canvas_ndc_conversion.wgsl  canvas_ndc_override.wgsl  canvas_ndc_uniform.wgsl  constants.wgsl  diff_display.entry.wgsl  diff_display.fragment.wgsl  force_bindgens_hand.wgsl  fullscreen_quad.vertex.wgsl  fullscreen_quad.wgsl  generic_gaussian.wgsl  helpers.wgsl  max_norm.compute.wgsl  multimodal_gaussian.entry.wgsl  multimodal_gaussian.fragment.wgsl  multimodal_gaussian.wgsl  resolution_uniform.wgsl  resolution_uniform_bind.wgsl  rwmh_info.wgsl  test_fixed_gaussian.wgsl  types.wgsl
shared/: Cargo.toml
shared/src/: lib.rs
slim/: favicon.svg.br  index.html  index.html.br  manifest.json  mcmc-demo-1db109d374cdb947.js  mcmc-demo-1db109d374cdb947_bg.wasm  mcmc-demo-2250bdb71dd74d6.js  mcmc-demo-2250bdb71dd74d6_bg.wasm  mcmc-demo-2c52880f05f01874.js  mcmc-demo-2c52880f05f01874_bg.wasm  mcmc-demo-439ea110677cf4c7.js  mcmc-demo-439ea110677cf4c7_bg.wasm  mcmc-demo-58baefaa6c772e15.js  mcmc-demo-58baefaa6c772e15.js.br  mcmc-demo-58baefaa6c772e15_bg.wasm  mcmc-demo-58baefaa6c772e15_bg.wasm.br  mcmc-demo-79d814d21315dee4.js  mcmc-demo-79d814d21315dee4_bg.wasm  mcmc-demo-887162111aab58c1.js  mcmc-demo-887162111aab58c1_bg.wasm  mcmc-demo-9887f051bef7d0a6.js  mcmc-demo-9887f051bef7d0a6_bg.wasm  mcmc-demo-ce8c22f550797128.js  mcmc-demo-ce8c22f550797128.js.br  mcmc-demo-ce8c22f550797128_bg.wasm  mcmc-demo-ce8c22f550797128_bg.wasm.br  mcmc-demo-f42f51fa0f3d4274.js  mcmc-demo-f42f51fa0f3d4274_bg.wasm  mcmc-demo-f42f51fa0f3d4274_bg.wasm.br  serviceworker.js.br
snippets/wasm-bindgen-rayon-38edf6e439f6d70d/src/: workerHelpers.no-bundler.js.br
src/: app.rs  backend_panel.rs  custom3d_wgpu.rs  custom3d_wgpu_shader.wgsl  fullscreen_quad.rs  fullscreen_quad.wgsl  html_bindings.rs  lib.rs  main.rs  native_main.rs  test_fixed_gaussian.rs  test_fixed_gaussian.wgsl
src/bg_task/: helpers.rs  mod.rs
src/diagnostics/: backend_panel.rs  mod.rs  puffin.rs  tracing.rs
src/helpers/: async_last_task_processor.rs  egui_temp_state.rs  gpu_task.rs  html_bindings.rs  mod.rs  owning_watch_channel.rs  temp_ui_state.rs
src/helpers/bg_task/: mod.rs
src/profile/: backend_panel.rs  frame_history.rs  mod.rs  tracing.rs
src/settings/: mod.rs
src/simulation/: mod.rs  random_walk_metropolis_hastings.rs  rngs.rs
src/target_distributions/: multimodal_gaussian.rs
src/visualizations/: egui_expressed.rs  mod.rs
src/visualizations/egui_based/: distrib_settings.rs  mod.rs  point_display.rs
src/visualizations/shader_based/: bda_compute.rs  diff_display.rs  mod.rs  multimodal_gaussian.rs  random_walk_metropolis_hastings.rs  resolution_uniform.rs  target_distr.rs
(+11 files in other folders)
