[workspace]
resolver = "2"
members = ["executable", "macros", "shared"]
default-members = ["executable"]

[workspace.package]
authors = ["Samuel Maier <9smtm6@gmail.com>"]
version = "0.2.0-rc2-dev"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 2 # fast and small wasm
# opt-level = "z" #note the override of packages
# see: https://fasterthanli.me/articles/why-is-my-rust-build-so-slow#link-time-optimization-lto
# lto = "thin"
# codegen-units = 1
# panic = "abort"
# strip = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
# the release on patched branches MUST match the set version above, otherwise cargo will ignore this (it will warn about it though).

# If you want to use the bleeding edge version of egui and eframe:
# The released egui regularly lags behind in wgpu versions, if this is relevant, re-add the patch.
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# wgsl_to_wgpu = { path = "../wgsl_to_wgpu/wgsl_to_wgpu" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }

[workspace.lints.rust]
unsafe-op-in-unsafe-fn = "warn"
let_underscore_drop = "deny"
rust_2024_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable, rust_analyzer)'] }
edition_2024_expr_fragment_specifier = "allow"
# unstable
# must_not_suspend = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
branches_sharing_code = "warn"
checked_conversions = "warn"
cognitive_complexity = "warn"
dbg_macro = "warn"
# "warn_on_ci"
expl_impl_clone_on_copy = "deny"
float_cmp = "warn"
fn_params_excessive_bools = "warn"
indexing_slicing = "warn"
manual_ok_or = "warn"
missing_const_for_fn = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "warn"
multiple_crate_versions = "warn"
needless_borrowed_reference = "allow"
needless_pass_by_value = "warn"
no_effect_underscore_binding = "warn"
pattern_type_mismatch = "warn"
rc_buffer = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
separated_literal_suffix = "warn"
shadow_unrelated = "warn"
struct_excessive_bools = "warn"
# todo = "warn"
# "warn_on_ci"
undocumented_unsafe_blocks = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
# unwrap_used = "warn"
# "warn_on_ci"
used_underscore_binding = "warn"

[workspace.dependencies]
macros = { path = "./macros" }
shared = { path = "./shared" }
